--- a/public/404.html
+++ b/public/404.html
@@ -209,7 +209,7 @@ Matteo profile | Page not found
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="/#experience"
                             aria-label="experience">
-                            Expérience proffessionelles
+                            Expériences professionelles
                         </a>
                     </li>
                     
