--- a/public/ap/ap01/index.html
+++ b/public/ap/ap01/index.html
@@ -221,7 +221,7 @@ AP01 PHP | Matteo profile
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="/#experience"
                             aria-label="experience">
-                            Expérience proffessionelles
+                            Expériences professionelles
                         </a>
                     </li>
                     
