--- a/public/gallery/index.html
+++ b/public/gallery/index.html
@@ -212,7 +212,7 @@ Image Gallery | Matteo profile
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="/#experience"
                             aria-label="experience">
-                            Expérience proffessionelles
+                            Expériences professionelles
                         </a>
                     </li>
                     
