--- a/public/ap/ap03/index.html
+++ b/public/ap/ap03/index.html
@@ -223,7 +223,7 @@ Render Math With Mathjax | Matteo profile
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="/#experience"
                             aria-label="experience">
-                            Expérience proffessionelles
+                            Expériences professionelles
                         </a>
                     </li>
                     
