--- a/public/ap/placeholder-text/index.html
+++ b/public/ap/placeholder-text/index.html
@@ -223,7 +223,7 @@ Placeholder Text | Matteo profile
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="/#experience"
                             aria-label="experience">
-                            Expérience proffessionelles
+                            Expériences professionelles
                         </a>
                     </li>
                     
