--- a/public/index.html
+++ b/public/index.html
@@ -307,10 +307,10 @@ Matteo profile
                     Bonjour je suis
                 </span>
                 <h1>
-                    Matteo.
+                    COTTON Matteo.
                 </h1>
                 <h2>
-                    Je suis actuellement en bts sio (sisr)
+                    Je suis actuellement en bts sio (Service Informatiques aux Organisation) Option SISR ( Solution D&#39;infrastructure,Systémes et Réseaux)
                 </h2>
                 <p class="hero-content">
                     .
@@ -349,7 +349,7 @@ Matteo profile
             
             <div class="col-sm-12 col-md-8 col-lg-4 mb-5 mb-sm-0 mb-md-5 mb-lg-0 d-none d-sm-none d-md-block">
                 <div class="image d-flex px-5">
-                    <img src="/images/Ap/images.jpeg" class="img-thumbnail mx-auto rounded-circle" alt="">
+                    <img src="/images/Moi.png/" class="img-thumbnail mx-auto rounded-circle" alt="">
                 </div>
             </div>
             
