--- a/public/ap/tableau-de-synthese/index.html
+++ b/public/ap/tableau-de-synthese/index.html
@@ -331,7 +331,7 @@ Tableau de synthèse concernant les deux années de BTS SIO | Matteo profile
           
           <article class="page-content  p-2">
           <p>Pendant les deux années de BTS SIO, j&rsquo;ai pu réaliser différents projets que ce soit en cours ou en milieu professionnel. Nous devions réaiser un tableau de synthèse afin de regrouper les différents projets réalisés et les compétences qui y sont associés.
-Ce tableau est consultable au lien suivant : <a href="/docs/synthese.pdf">Tableau de synthèse COTTON Matteo</a></p>
+Ce tableau est consultable au lien suivant : <a href="/docs/tab.pdf">Tableau de synthèse COTTON Matteo</a></p>
 
           </article>
         </div>
